--- a/process_z.ipynb
+++ b/process_z.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,66 +40,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "subfolder is: llama2-7b-chat-4k_gpt_g0.25_d10.0\n",
+      "subfolder is: llama2-7b-chat-4k_gpt_g0.1_d10.0\n",
+      "subfolder is: llama2-7b-chat-4k_old_g0.25_d15.0_hard\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.75_d5.0_hard\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.25_d2.0\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.5_d2.0_hard\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.25_d5.0_hard\n",
       "subfolder is: llama2-7b-chat-4k_gpt_g0.5_d5.0\n",
+      "subfolder is: llama2-7b-chat-4k_old_g0.1_d5.0\n",
+      "subfolder is: llama2-7b-chat-4k_v2_g0.25_d10.0\n",
+      "subfolder is: llama2-7b-chat-4k_v2_g0.1_d5.0\n",
+      "subfolder is: llama2-7b-chat-4k_old_g0.25_d10.0_hard\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.9_d5.0\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.5_d2.0\n",
       "subfolder is: llama2-7b-chat-4k_gpt_g0.5_d2.0\n",
       "subfolder is: llama2-7b-chat-4k_gpt_g0.9_d5.0\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.25_d2.0\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.9_d5.0_hard\n",
+      "subfolder is: llama2-7b-chat-4k_gpt_g0.1_d5.0\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.5_d5.0\n",
       "subfolder is: llama2-7b-chat-4k_gpt_g0.25_d5.0\n",
+      "subfolder is: llama2-7b-chat-4k_gpt_g0.25_d15.0\n",
+      "subfolder is: llama2-7b-chat-4k_v2_g0.1_d10.0\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.75_d5.0\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.5_d2.0\n",
+      "subfolder is: llama2-7b-chat-4k_old_g0.25_d15.0\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.9_d5.0\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.5_d5.0_hard\n",
       "subfolder is: llama2-7b-chat-4k_new_g0.5_d5.0\n",
       "subfolder is: llama2-7b-chat-4k_no_g0.5_d5.0\n",
       "subfolder is: llama2-7b-chat-4k_gpt_g0.75_d5.0\n",
+      "subfolder is: llama2-7b-chat-4k_old_g0.1_d5.0_hard\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.25_d2.0_hard\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.25_d5.0\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.75_d5.0\n",
+      "subfolder is: llama2-7b-chat-4k_old_g0.1_d10.0_hard\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.5_d5.0\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.25_d5.0\n",
-      "            model_name             mission_name mode gamma delta  threshold  \\\n",
-      "0    llama2-7b-chat-4k               alpacafarm  old  0.75   5.0        6.0   \n",
-      "1    llama2-7b-chat-4k   konwledge_memorization  old  0.75   5.0        6.0   \n",
-      "2    llama2-7b-chat-4k                    qmsum  old  0.75   5.0        6.0   \n",
-      "3    llama2-7b-chat-4k               finance_qa  old  0.75   5.0        6.0   \n",
-      "4    llama2-7b-chat-4k  konwledge_understanding  old  0.75   5.0        6.0   \n",
-      "..                 ...                      ...  ...   ...   ...        ...   \n",
-      "214  llama2-7b-chat-4k                    qmsum  old  0.25   5.0        6.0   \n",
-      "215  llama2-7b-chat-4k  konwledge_understanding  old  0.25   5.0        6.0   \n",
-      "216  llama2-7b-chat-4k                      lcc  old  0.25   5.0        6.0   \n",
-      "217  llama2-7b-chat-4k               finance_qa  old  0.25   5.0        6.0   \n",
-      "218  llama2-7b-chat-4k               alpacafarm  old  0.25   5.0        6.0   \n",
+      "subfolder is: llama2-7b-chat-4k_v2_g0.25_d15.0\n",
+      "subfolder is: llama2-7b-chat-4k_old_g0.25_d10.0\n",
+      "subfolder is: llama2-7b-chat-4k_old_g0.1_d10.0\n",
+      "            model_name            mission_name mode gamma delta  threshold  \\\n",
+      "0    llama2-7b-chat-4k                   qmsum  gpt  0.25  10.0        6.0   \n",
+      "1    llama2-7b-chat-4k              alpacafarm  gpt  0.25  10.0        6.0   \n",
+      "2    llama2-7b-chat-4k                hotpotqa  gpt  0.25  10.0        6.0   \n",
+      "3    llama2-7b-chat-4k             longform_qa  gpt  0.25  10.0        6.0   \n",
+      "4    llama2-7b-chat-4k                     lcc  gpt  0.25  10.0        6.0   \n",
+      "..                 ...                     ...  ...   ...   ...        ...   \n",
+      "358  llama2-7b-chat-4k                hotpotqa  old   0.1  10.0        6.0   \n",
+      "359  llama2-7b-chat-4k  konwledge_memorization  old   0.1  10.0        6.0   \n",
+      "360  llama2-7b-chat-4k              multi_news  old   0.1  10.0        6.0   \n",
+      "361  llama2-7b-chat-4k              finance_qa  old   0.1  10.0        6.0   \n",
+      "362  llama2-7b-chat-4k             longform_qa  old   0.1  10.0        6.0   \n",
       "\n",
       "    bl_type    z_score  sum  \n",
-      "0      hard   8.646414  805  \n",
-      "1      hard   2.641556  200  \n",
-      "2      hard   4.840824  200  \n",
-      "3      hard   9.696045  200  \n",
-      "4      hard   0.592229  200  \n",
+      "0      None  18.372595  200  \n",
+      "1      None  24.303930  805  \n",
+      "2      None   2.740259  200  \n",
+      "3      None  28.158617  200  \n",
+      "4      None   8.304532  198  \n",
       "..      ...        ...  ...  \n",
-      "214    soft   7.724550  200  \n",
-      "215    soft   2.025398  200  \n",
-      "216    soft   6.130328  200  \n",
-      "217    soft  10.500217  200  \n",
-      "218    soft   9.231044  805  \n",
+      "358    soft   6.149754  200  \n",
+      "359    soft  10.674784  200  \n",
+      "360    soft  63.581417  200  \n",
+      "361    soft  48.024014  200  \n",
+      "362    soft  49.479527  200  \n",
       "\n",
-      "[219 rows x 9 columns]\n",
-      "219\n"
+      "[363 rows x 9 columns]\n",
+      "363\n"
      ]
     }
    ],
@@ -181,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -189,32 +205,32 @@
      "output_type": "stream",
      "text": [
       "            model_name             mission_name mode gamma delta  threshold  \\\n",
-      "156  llama2-7b-chat-4k                      lcc   no   0.5   5.0        6.0   \n",
-      "139  llama2-7b-chat-4k                 hotpotqa  old   0.9   5.0        6.0   \n",
-      "143  llama2-7b-chat-4k  konwledge_understanding  old   0.9   5.0        6.0   \n",
-      "128  llama2-7b-chat-4k  konwledge_understanding   v2   0.5   2.0        6.0   \n",
-      "98   llama2-7b-chat-4k  konwledge_understanding  old   0.9   5.0        6.0   \n",
+      "255  llama2-7b-chat-4k                      lcc   no   0.5   5.0        6.0   \n",
+      "238  llama2-7b-chat-4k                 hotpotqa  old   0.9   5.0        6.0   \n",
+      "242  llama2-7b-chat-4k  konwledge_understanding  old   0.9   5.0        6.0   \n",
+      "218  llama2-7b-chat-4k  konwledge_understanding   v2   0.5   2.0        6.0   \n",
+      "161  llama2-7b-chat-4k  konwledge_understanding  old   0.9   5.0        6.0   \n",
       "..                 ...                      ...  ...   ...   ...        ...   \n",
-      "182  llama2-7b-chat-4k              longform_qa  old  0.25   2.0        6.0   \n",
-      "31   llama2-7b-chat-4k                    qmsum  old  0.25   5.0        6.0   \n",
-      "179  llama2-7b-chat-4k                    qmsum  old  0.25   2.0        6.0   \n",
-      "30   llama2-7b-chat-4k               multi_news  old  0.25   5.0        6.0   \n",
-      "178  llama2-7b-chat-4k               multi_news  old  0.25   2.0        6.0   \n",
+      "360  llama2-7b-chat-4k               multi_news  old   0.1  10.0        6.0   \n",
+      "12   llama2-7b-chat-4k                    qmsum  gpt   0.1  10.0        6.0   \n",
+      "276  llama2-7b-chat-4k               multi_news  old   0.1   5.0        6.0   \n",
+      "315  llama2-7b-chat-4k               multi_news  old   0.1  10.0        6.0   \n",
+      "15   llama2-7b-chat-4k               multi_news  gpt   0.1  10.0        6.0   \n",
       "\n",
       "    bl_type    z_score  sum  \n",
-      "156    None  -0.915615  200  \n",
-      "139    soft  -0.717057  200  \n",
-      "143    soft  -0.534699  200  \n",
-      "128    None  -0.507295  200  \n",
-      "98     hard  -0.487937  200  \n",
+      "255    None  -0.915615  200  \n",
+      "238    soft  -0.717057  200  \n",
+      "242    soft  -0.534699  200  \n",
+      "218    None  -0.507295  200  \n",
+      "161    hard  -0.487937  200  \n",
       "..      ...        ...  ...  \n",
-      "182    hard  29.735363  200  \n",
-      "31     hard  30.585075  200  \n",
-      "179    hard  30.816006  200  \n",
-      "30     hard  37.959408  200  \n",
-      "178    hard  38.530666  200  \n",
+      "360    soft  63.581417  200  \n",
+      "12     None  65.750604  200  \n",
+      "276    hard  66.190720  200  \n",
+      "315    hard  66.190720  200  \n",
+      "15     None  66.471030  200  \n",
       "\n",
-      "[219 rows x 9 columns]\n"
+      "[363 rows x 9 columns]\n"
      ]
     }
    ],
