mutual_detect human

--- a/process_z.ipynb
+++ b/process_z.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 导入tabulate模块，它可以将数据转换为markdown表格格式\n",
     "# import tabulate\n",
     "import json\n",
     "import re\n",
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -48,46 +47,128 @@
      "output_type": "stream",
      "text": [
       "subfolder is: llama2-7b-chat-4k_gpt_g0.25_d10.0\n",
+      "d10\n",
+      "llama2-7b-chat-4k gpt 0.25 10.0 None\n",
       "subfolder is: llama2-7b-chat-4k_gpt_g0.1_d10.0\n",
+      "d10\n",
+      "llama2-7b-chat-4k gpt 0.1 10.0 None\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.25_d15.0_hard\n",
+      "hard\n",
+      "llama2-7b-chat-4k old 0.25 15.0 hard\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.75_d5.0_hard\n",
+      "hard\n",
+      "llama2-7b-chat-4k old 0.75 5.0 hard\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.25_d2.0\n",
+      "d2\n",
+      "llama2-7b-chat-4k v2 0.25 2.0 None\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.5_d2.0_hard\n",
+      "hard\n",
+      "llama2-7b-chat-4k old 0.5 2.0 hard\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.25_d5.0_hard\n",
+      "hard\n",
+      "llama2-7b-chat-4k old 0.25 5.0 hard\n",
       "subfolder is: llama2-7b-chat-4k_gpt_g0.5_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k gpt 0.5 5.0 None\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.1_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k old 0.1 5.0 soft\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.25_d10.0\n",
+      "d10\n",
+      "llama2-7b-chat-4k v2 0.25 10.0 None\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.1_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k v2 0.1 5.0 None\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.25_d10.0_hard\n",
+      "hard\n",
+      "llama2-7b-chat-4k old 0.25 10.0 hard\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.9_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k v2 0.9 5.0 None\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.5_d2.0\n",
+      "d2\n",
+      "llama2-7b-chat-4k old 0.5 2.0 soft\n",
       "subfolder is: llama2-7b-chat-4k_gpt_g0.5_d2.0\n",
+      "d2\n",
+      "llama2-7b-chat-4k gpt 0.5 2.0 None\n",
       "subfolder is: llama2-7b-chat-4k_gpt_g0.9_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k gpt 0.9 5.0 None\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.25_d2.0\n",
+      "d2\n",
+      "llama2-7b-chat-4k old 0.25 2.0 soft\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.9_d5.0_hard\n",
+      "hard\n",
+      "llama2-7b-chat-4k old 0.9 5.0 hard\n",
       "subfolder is: llama2-7b-chat-4k_gpt_g0.1_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k gpt 0.1 5.0 None\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.5_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k v2 0.5 5.0 None\n",
       "subfolder is: llama2-7b-chat-4k_gpt_g0.25_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k gpt 0.25 5.0 None\n",
       "subfolder is: llama2-7b-chat-4k_gpt_g0.25_d15.0\n",
+      "d15\n",
+      "llama2-7b-chat-4k gpt 0.25 15.0 None\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.1_d10.0\n",
+      "d10\n",
+      "llama2-7b-chat-4k v2 0.1 10.0 None\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.75_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k v2 0.75 5.0 None\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.5_d2.0\n",
+      "d2\n",
+      "llama2-7b-chat-4k v2 0.5 2.0 None\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.25_d15.0\n",
+      "d15\n",
+      "llama2-7b-chat-4k old 0.25 15.0 soft\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.9_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k old 0.9 5.0 soft\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.5_d5.0_hard\n",
+      "hard\n",
+      "llama2-7b-chat-4k old 0.5 5.0 hard\n",
       "subfolder is: llama2-7b-chat-4k_new_g0.5_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k new 0.5 5.0 None\n",
       "subfolder is: llama2-7b-chat-4k_no_g0.5_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k no 0.5 5.0 None\n",
       "subfolder is: llama2-7b-chat-4k_gpt_g0.75_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k gpt 0.75 5.0 None\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.1_d5.0_hard\n",
+      "hard\n",
+      "llama2-7b-chat-4k old 0.1 5.0 hard\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.25_d2.0_hard\n",
+      "hard\n",
+      "llama2-7b-chat-4k old 0.25 2.0 hard\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.25_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k v2 0.25 5.0 None\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.75_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k old 0.75 5.0 soft\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.1_d10.0_hard\n",
+      "hard\n",
+      "llama2-7b-chat-4k old 0.1 10.0 hard\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.5_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k old 0.5 5.0 soft\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.25_d5.0\n",
+      "d5\n",
+      "llama2-7b-chat-4k old 0.25 5.0 soft\n",
       "subfolder is: llama2-7b-chat-4k_v2_g0.25_d15.0\n",
+      "d15\n",
+      "llama2-7b-chat-4k v2 0.25 15.0 None\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.25_d10.0\n",
+      "d10\n",
+      "llama2-7b-chat-4k old 0.25 10.0 soft\n",
       "subfolder is: llama2-7b-chat-4k_old_g0.1_d10.0\n",
+      "d10\n",
+      "llama2-7b-chat-4k old 0.1 10.0 soft\n",
       "            model_name            mission_name mode gamma delta  threshold  \\\n",
       "0    llama2-7b-chat-4k                   qmsum  gpt  0.25  10.0        6.0   \n",
       "1    llama2-7b-chat-4k              alpacafarm  gpt  0.25  10.0        6.0   \n",
@@ -132,7 +213,7 @@
     "num = 0\n",
     "# get all files from input_dir\n",
     "for subfolder in os.listdir(input_dir):\n",
-    "    # print(\"subfolder is:\", subfolder)\n",
+    "    print(\"subfolder is:\", subfolder)\n",
     "    matcher = re.match(p, subfolder)\n",
     "    model_name = matcher.group(\"model_name\")\n",
     "    mode = matcher.group(\"mode\")\n",
@@ -142,6 +223,7 @@
     "    bl_type = \"None\"\n",
     "    bl_type = (subfolder.split(\"_\")[-1]).split(\".\")[0]\n",
     "    \n",
+    "    print(bl_type)\n",
     "    if bl_type != \"hard\":\n",
     "        if \"old\" in subfolder:\n",
     "            bl_type = \"soft\"\n",
@@ -149,11 +231,11 @@
     "            bl_type = \"None\"\n",
     "        \n",
     "        \n",
-    "    # print(model_name, mode, gamma, delta, bl_type)\n",
+    "    print(model_name, mode, gamma, delta, bl_type)\n",
     "    \n",
     "    z_score_path = os.path.join(input_dir, subfolder, \"z_score\")\n",
     "    if os.path.exists(z_score_path):\n",
-    "        print(\"subfolder is:\", subfolder)\n",
+    "        # print(\"subfolder is:\", subfolder)\n",
     "        files = os.listdir(z_score_path)\n",
     "        \n",
     "        for file in files:\n",
@@ -242,10 +324,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subfolder is: ref_old_soft_g0.1_d10.0\n",
+      "old_soft_g0.1_d10.0\n",
+      "gpt_g0.1_d10.0\n",
+      "old_hard_g0.25_d5.0\n",
+      "old_soft_g0.25_d15.0\n",
+      "v2_g0.25_d15.0\n",
+      "subfolder is: ref_old_hard_g0.25_d5.0\n",
+      "old_hard_g0.25_d5.0\n",
+      "old_soft_g0.1_d10.0\n",
+      "gpt_g0.1_d10.0\n",
+      "old_soft_g0.25_d15.0\n",
+      "v2_g0.25_d15.0\n",
+      "subfolder is: ref_old_soft_g0.25_d15.0\n",
+      "old_soft_g0.25_d15.0\n",
+      "old_soft_g0.1_d10.0\n",
+      "gpt_g0.1_d10.0\n",
+      "old_hard_g0.25_d5.0\n",
+      "v2_g0.25_d15.0\n",
+      "subfolder is: ref_gpt_g0.1_d10.0\n",
+      "gpt_g0.1_d10.0\n",
+      "old_soft_g0.1_d10.0\n",
+      "old_hard_g0.25_d5.0\n",
+      "old_soft_g0.25_d15.0\n",
+      "v2_g0.25_d15.0\n",
+      "subfolder is: ref_v2_g0.25_d15.0\n",
+      "v2_g0.25_d15.0\n",
+      "old_soft_g0.1_d10.0\n",
+      "gpt_g0.1_d10.0\n",
+      "old_hard_g0.25_d5.0\n",
+      "old_soft_g0.25_d15.0\n",
+      "            model_name             mission_name             ref_mode  \\\n",
+      "0    llama2-7b-chat-4k               multi_news  old_soft_g0.1_d10.0   \n",
+      "1    llama2-7b-chat-4k               alpacafarm  old_soft_g0.1_d10.0   \n",
+      "2    llama2-7b-chat-4k                      lcc  old_soft_g0.1_d10.0   \n",
+      "3    llama2-7b-chat-4k              longform_qa  old_soft_g0.1_d10.0   \n",
+      "4    llama2-7b-chat-4k   konwledge_memorization  old_soft_g0.1_d10.0   \n",
+      "..                 ...                      ...                  ...   \n",
+      "175  llama2-7b-chat-4k   konwledge_memorization       v2_g0.25_d15.0   \n",
+      "176  llama2-7b-chat-4k  konwledge_understanding       v2_g0.25_d15.0   \n",
+      "177  llama2-7b-chat-4k                 hotpotqa       v2_g0.25_d15.0   \n",
+      "178  llama2-7b-chat-4k               finance_qa       v2_g0.25_d15.0   \n",
+      "179  llama2-7b-chat-4k                    qmsum       v2_g0.25_d15.0   \n",
+      "\n",
+      "                 det_mode threshold    z_score  sum  \n",
+      "0          gpt_g0.1_d10.0       4.0  -2.051204  200  \n",
+      "1          gpt_g0.1_d10.0       4.0  -1.545221  805  \n",
+      "2          gpt_g0.1_d10.0       4.0  -0.608703  200  \n",
+      "3          gpt_g0.1_d10.0       4.0  -1.884483  200  \n",
+      "4          gpt_g0.1_d10.0       4.0   0.170509  200  \n",
+      "..                    ...       ...        ...  ...  \n",
+      "175  old_soft_g0.25_d15.0       4.0  -3.069688  200  \n",
+      "176  old_soft_g0.25_d15.0       4.0  -1.915622  200  \n",
+      "177  old_soft_g0.25_d15.0       4.0  -2.144303  200  \n",
+      "178  old_soft_g0.25_d15.0       4.0  -9.799492  200  \n",
+      "179  old_soft_g0.25_d15.0       4.0 -10.246890  200  \n",
+      "\n",
+      "[180 rows x 7 columns]\n",
+      "180\n"
+     ]
+    }
+   ],
+   "source": [
+    "### process_mutual\n",
+    "df = pd.DataFrame(columns=[\"model_name\", \"mission_name\", \"ref_mode\", \"det_mode\", \"threshold\", \"z_score\", \"sum\"])\n",
+    "\n",
+    "input_dir = \"./mutual_detect/llama2-7b-chat-4k\"\n",
+    "\n",
+    "num = 0\n",
+    "p1 = r\"(?P<misson_name>[a-zA-Z_]+)_(?P<threshold>\\d+(\\.\\d+)?)_z\"\n",
+    "\n",
+    "# get all files from input_dir\n",
+    "for subfolder in os.listdir(input_dir):\n",
+    "    print(\"subfolder is:\", subfolder)\n",
+    "    \n",
+    "    ref_mode = subfolder.split(\"ref_\")[1]\n",
+    "        \n",
+    "    print(ref_mode)\n",
+    "    \n",
+    "    for subsubfolder in os.listdir(os.path.join(input_dir,subfolder)):\n",
+    "        \n",
+    "        det_mode = subsubfolder.split(\"_z\")[0]\n",
+    "        print(det_mode)\n",
+    "    \n",
+    "        z_score_path = os.path.join(input_dir, subfolder, subsubfolder)\n",
+    "        if os.path.exists(z_score_path):\n",
+    "        # print(\"subfolder is:\", subfolder)\n",
+    "            files = os.listdir(z_score_path)\n",
+    "        \n",
+    "            for file in files:\n",
+    "                # print(file)\n",
+    "                # read jsons\n",
+    "                matcher1 = re.match(p1, file)\n",
+    "                if matcher1:\n",
+    "                    misson_name = matcher1.group(\"misson_name\")\n",
+    "                    threshold = matcher1.group(\"threshold\")\n",
+    "                with open(os.path.join(z_score_path, file), \"r\") as f:\n",
+    "                    data = json.load(f)\n",
+    "\n",
+    "                # get data\n",
+    "                avarage_z = data[\"avarage_z\"]\n",
+    "                sum = len(data[\"z_score_list\"])\n",
+    "                # wm_pred_avarage = data[\"wm_pred_avarage\"]\n",
+    "                \n",
+    "                temp = pd.DataFrame({\n",
+    "                    \"model_name\": [model_name],\n",
+    "                    \"ref_mode\": [ref_mode],\n",
+    "                    \"mission_name\": [misson_name],\n",
+    "                    \"det_mode\":[det_mode],\n",
+    "                    \"threshold\": [threshold],\n",
+    "                    \"z_score\": [avarage_z],\n",
+    "                    \"sum\": [sum]})\n",
+    "                \n",
+    "                df = pd.concat([df, temp], ignore_index=True)\n",
+    "                num += 1\n",
+    "\n",
+    "df.to_csv(\"mutual_z_score.csv\")           \n",
+    "print(df)\n",
+    "print(num)\n"
+   ]
   }
  ],
  "metadata": {
