--- a/process_z.ipynb
+++ b/process_z.ipynb
@@ -204,7 +204,7 @@
     "# load data from pred\n",
     "\n",
     "\n",
-    "df = pd.DataFrame(columns=[\"model_name\", \"mission_name\", \"mode\", \"gamma\", \"delta\", \"threshold\", \"bl_type\", \"z_score\", \"sum\"])\n",
+    "df = pd.DataFrame(columns=[\"model_name\", \"mission_category\", \"mode\", \"gamma\", \"delta\", \"threshold\", \"bl_type\", \"z_score\", \"sum\"])\n",
     "\n",
     "input_dir = \"./pred\"\n",
     "p = r\"(?P<model_name>.+)_(?P<mode>old|v2|gpt|new|no)_g(?P<gamma>.+)_d(?P<delta>\\d+(\\.\\d+)?)\"\n",
@@ -259,7 +259,7 @@
     "            temp = pd.DataFrame({\n",
     "                \"model_name\": [model_name],\n",
     "                \"mode\": [mode],\n",
-    "                \"mission_name\": [misson_name],\n",
+    "                \"mission_category\": [misson_name],\n",
     "                \"gamma\": [gamma],\n",
     "                \"delta\":[delta],\n",
     "                \"threshold\": [threshold],\n",
@@ -449,6 +449,153 @@
     "df.to_csv(\"mutual_z_score.csv\")           \n",
     "print(df)\n",
     "print(num)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 7/7 [00:09<00:00,  1.36s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The vocab size of chatglm2-6b-32k tokenizer is 64787\n",
+      "The vocab size of chatglm2-6b-32k is 65024\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 导入transformers库\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import json\n",
+    "\n",
+    "def seed_everything(seed):\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    random.seed(seed)\n",
+    "    torch.backends.cudnn.benchmark = False\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    \n",
+    "seed_everything(42)\n",
+    "model2path = json.load(open(\"config/model2path.json\", \"r\"))\n",
+    "dataset2maxlen = json.load(open(\"config/dataset2maxlen.json\", \"r\"))\n",
+    "model_name = \"vicuna-13b\"\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "# 加载chatglm2-6b-32k模型的tokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model2path[model_name], trust_remote_code=True)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model2path[model_name], trust_remote_code=True,\n",
+    "                                                  output_scores=True, return_dict_in_generate=True, \n",
+    "                                                  torch_dtype=torch.bfloat16).to(device)\n",
+    "\n",
+    "# 获取tokenizer的词表大小\n",
+    "vocab_size = model.config.padded_vocab_size\n",
+    "vocab_size_tokenizer = len(tokenizer.get_vocab().values())\n",
+    "\n",
+    "# 打印词表大小\n",
+    "print(\"The vocab size of chatglm2-6b-32k tokenizer is\", vocab_size_tokenizer)\n",
+    "print(\"The vocab size of chatglm2-6b-32k is\", vocab_size)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 8/8 [00:13<00:00,  1.66s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<|User|>:You are a helpful assistant, please answer the following question within 300 words:\\n\\n( LI5 ) Explain to me the collapse of the Soviet Union . How did one of the largest superpowers manage to fall ? Is it possible something similar could eventually happen to the USA ? Explain like I'm five.<eoh>\\n<|Bot|>:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tsq/anaconda3/envs/wmklmm/lib/python3.10/site-packages/transformers/generation/utils.py:1270: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use a generation configuration file (see https://huggingface.co/docs/transformers/main_classes/text_generation )\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'text': 'When', 'logprob': -1.390625}, {'text': ' K', 'logprob': -2.40625}, {'text': 'gb', 'logprob': -0.76953125}, {'text': ' officers', 'logprob': -0.126953125}, {'text': ' liquid', 'logprob': -5.0}, {'text': 'ations', 'logprob': -1.1015625}, {'text': ' schools', 'logprob': -4.625}, {'text': ' instead', 'logprob': -3.125}, {'text': ' by', 'logprob': -4.84375}, {'text': ' opening', 'logprob': -1.609375}, {'text': ' their', 'logprob': -0.6953125}, {'text': ' centers', 'logprob': -2.296875}, {'text': ' of', 'logprob': -1.390625}, {'text': ' advanced', 'logprob': -5.375}, {'text': ' ag', 'logprob': -4.1875}, {'text': 'itation', 'logprob': -1.140625}, {'text': ' and', 'logprob': -0.73828125}, {'text': ' infiltr', 'logprob': -1.390625}, {'text': 'ated', 'logprob': -0.69140625}, {'text': ' by', 'logprob': -0.6953125}, {'text': ' humanitarian', 'logprob': -6.8125}, {'text': ' funds', 'logprob': -5.53125}, {'text': ' with', 'logprob': -1.2734375}, {'text': ' NGO', 'logprob': -2.78125}, {'text': ' ', 'logprob': -3.328125}, {'text': '’', 'logprob': -1.359375}, {'text': ',', 'logprob': -4.84375}, {'text': ' which', 'logprob': -1.1015625}, {'text': ' took', 'logprob': -6.4375}, {'text': ' advantage', 'logprob': -0.6953125}, {'text': ' as', 'logprob': -3.265625}, {'text': ' leader', 'logprob': -6.3125}, {'text': ' to', 'logprob': -0.828125}, {'text': ' some', 'logprob': -5.125}, {'text': ' local', 'logprob': -2.203125}, {'text': ' officials', 'logprob': -0.0025177001953125}, {'text': ' people', 'logprob': -9.1875}, {'text': ' from', 'logprob': -1.609375}, {'text': ' mos', 'logprob': -4.15625}, {'text': '<eoa>', 'logprob': -4.0625}, {'text': '<0x0A>', 'logprob': 0.0}, {'text': '</s>', 'logprob': 0.0}]\n",
+      "When Kgb officers liquidations schools instead by opening their centers of advanced agitation and infiltrated by humanitarian funds with NGO ’, which took advantage as leader to some local officials people from mos<eoa>\n",
+      "\n",
+      "####################\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForCausalLM, LlamaTokenizer, LlamaForCausalLM\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import json\n",
+    "\n",
+    "from generate import Generator\n",
+    "from argparse import Namespace\n",
+    "\n",
+    "\n",
+    "def seed_everything(seed):\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    random.seed(seed)\n",
+    "    torch.backends.cudnn.benchmark = False\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    \n",
+    "seed_everything(42)\n",
+    "model_name = \"internlm-7b-8k\"\n",
+    "model2path = json.load(open(\"config/model2path.json\", \"r\"))\n",
+    "dataset2maxlen = json.load(open(\"config/dataset2maxlen.json\", \"r\"))\n",
+    "dataset = \"alpacafarm\"\n",
+    "max_gen = dataset2maxlen[dataset]\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model2path[model_name], trust_remote_code=True)\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "            model2path[model_name], device_map='auto', return_dict_in_generate=True, output_scores=True,trust_remote_code=True\n",
+    "        )\n",
+    "\n",
+    "watermark_args = Namespace(mode=\"v2\", gamma=0.25, delta=10.0, initial_seed=1234, dynamic_seed=None, bl_type=\"soft\", num_beams=1, sampling_temp=0.7, seeding_scheme=\"simple_1\", select_green_tokens=True)\n",
+    "\n",
+    "generator = Generator(watermark_args, tokenizer, model)\n",
+    "with open(\"testfile.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = f.read()\n",
+    "    \n",
+    "print(data)\n",
+    "\n",
+    "# 对数据进行分词\n",
+    "input = tokenizer(data, truncation=False, return_tensors=\"pt\").to(device)\n",
+    "\n",
+    "completions_text, completions_tokens  = generator.generate(input_ids=input.input_ids, max_new_tokens=max_gen)\n",
+    "\n",
+    "print(completions_tokens)\n",
+    "print(completions_text)\n",
+    "\n",
+    "print(\"####################\")\n"
    ]
   }
  ],
