--- a/plot_image_and_tables.ipynb
+++ b/plot_image_and_tables.ipynb
@@ -8,6 +8,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before running this notebook, please run the following scripts:\n",
+    "``` bash   \n",
+    "    python -m process.process_z --model llama2-7b-chat-4k\n",
+    "    python -m process.process_z --model internlm-7b-8k\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -19,8 +30,11 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
+    "# Record the eval score for different models, modes and missions\n",
     "df_eval = pd.DataFrame(columns=[\"model_name\", \"mode\", \"mission_name\", \"score\"])\n",
+    "# Record the TP score for different models, modes and missions\n",
     "df_tp = pd.DataFrame(columns=[\"model_name\", \"mode\", \"mission_name\", \"z_score\", \"true_positive\", \"sum\"])\n",
+    "# Record the TN score for different models, modes and missions\n",
     "df_tn = pd.DataFrame(columns=[\"model_name\", \"mode\", \"mission_name\", \"true_negative\"])\n",
     "tn_dict = [{} for i in range(5)]\n",
     "eval_dict = [{} for i in range(5)]\n",
@@ -37,7 +51,7 @@
     "\n",
     "input_dir = \"./pred\"\n",
     "\n",
-    "flag = 1 # 1: llama 0: internlm 2: 0.7TP\n",
+    "flag = 1 # 0: internlm 0.95TP 1: llama 0.95TP 2: llama 0.7TP\n",
     "model_names = [\"internlm-7b-8k\", \"llama2-7b-chat-4k\", \"llama2-7b-chat-4k\"]\n",
     "\n",
     "modes0 = [\"internlm-7b-8k_no_g0.1_d10.0\", \"llama2-7b-chat-4k_no_g0.5_d5.0\", \"llama2-7b-chat-4k_no_g0.5_d5.0\"]\n",
@@ -48,6 +62,7 @@
     "\n",
     "all_modes = [modes0, modes1, modes2, modes3, modes4]\n",
     "\n",
+    "# All missions\n",
     "dict_mission = {\n",
     "    0: \"konwledge_memorization\",\n",
     "    1: \"konwledge_understanding\",\n",
@@ -61,6 +76,7 @@
     "    9: \"avarage_mode\"\n",
     "}\n",
     "\n",
+    "# All missions Categories\n",
     "dict_cate_mission = {\n",
     "    0: \"C1:(Short Q, Short A)\",\n",
     "    1: \"C2:(Short Q, Long A)\",\n",
@@ -74,7 +90,7 @@
     "modes = [modes_i[flag] for modes_i in all_modes]\n",
     "\n",
     "tn_detect_modes = [\"_\".join(modex.split(\"_\")[1:]) for modex in modes]\n",
-    "print(tn_detect_modes)\n",
+    "# print(tn_detect_modes)\n",
     "\n",
     "num_eval = 0\n",
     "num_z = 0\n",
@@ -249,9 +265,9 @@
     "num = 0\n",
     "for subfolder in os.listdir(input_dir):\n",
     "    ref_mode = \"_\".join(subfolder.split(\"_\")[1:])\n",
-    "    print(\"ref_mode is\", ref_mode)\n",
+    "    # print(\"ref_mode is\", ref_mode)\n",
     "    if ref_mode in tn_detect_modes:\n",
-    "        print(\"mode_des is\", ref_mode)\n",
+    "        # print(\"mode_des is\", ref_mode)\n",
     "        \n",
     "        for subsubfolder in os.listdir(os.path.join(input_dir,subfolder)):\n",
     "            det_mode = subsubfolder.split(\"_z\")[0]\n",
